--- a/tests/test_stories.yml
+++ b/tests/test_stories.yml
@@ -334,6 +334,38 @@ stories:
   - active_loop: null
   - action: action_transfer_money
 
+- story: pay credit card + switch to transfer money, deny
+  steps:
+  - user: |
+      pay [credit card]{"entity": "account_type", "value": "credit"}
+    intent: pay_cc
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - user: |
+      transfer money
+    intent: transfer_money
+  - action: action_switch_forms_ask
+  - intent: deny
+  - action: action_switch_forms_deny
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+
+- story: pay credit card + switch to search transactions, deny
+  steps:
+  - user: |
+      pay [credit card]{"entity": "account_type", "value": "credit"}
+    intent: pay_cc
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - user: |
+      check earnings
+    intent: check_earnings
+  - action: action_switch_forms_ask
+  - intent: deny
+  - action: action_switch_forms_deny
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  
 - story: search transactions + switch to transfer money, deny
   steps:
   - user: |
@@ -349,7 +381,111 @@ stories:
   - action: action_switch_forms_deny
   - action: transaction_search_form
   - active_loop: transaction_search_form  
+  
+- story: search transactions + switch to pay credit card, deny
+  steps:
+  - user: |
+      check earnings
+    intent: check_earnings
+  - action: transaction_search_form
+  - active_loop: transaction_search_form
+  - user: |
+      pay [credit card]{"entity": "account_type", "value": "credit"}
+    intent: pay_cc
+  - action: action_switch_forms_ask
+  - intent: deny
+  - action: action_switch_forms_deny
+  - action: transaction_search_form
+  - active_loop: transaction_search_form
+  
+- story: transfer money + switch to search transactions, deny
+  steps:
+  - user: |
+      transfer money
+    intent: transfer_money
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
+  - user: |
+      check earnings
+    intent: check_earnings
+  - action: action_switch_forms_ask
+  - intent: deny
+  - action: action_switch_forms_deny
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
 
+- story: transfer money + switch to pay credit card, deny
+  steps:
+  - user: |
+      transfer money
+    intent: transfer_money
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
+  - user: |
+      pay [credit card]{"entity": "account_type", "value": "credit"}
+    intent: pay_cc
+  - action: action_switch_forms_ask
+  - intent: deny
+  - action: action_switch_forms_deny
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
+
+- story: pay credit card + switch to search transactions, affirm + switch back, deny
+  steps:
+  - user: |
+      pay [credit card]{"entity": "account_type", "value": "credit"}
+    intent: pay_cc
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - user: |
+      check earnings
+    intent: check_earnings
+  - action: action_switch_forms_ask
+  - intent: affirm
+  - action: utter_ok
+  - action: action_switch_forms_affirm
+  - slot_was_set:
+    - previous_form_name: cc_payment_form
+  - action: transaction_search_form
+  - active_loop: transaction_search_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_transaction_search
+  - action: action_switch_back_ask
+  - slot_was_set:
+    - previous_form_name: null
+  - intent: deny
+  - action: utter_ask_whatelse
+
+- story: pay credit card + switch to transfer money, affirm + switch back, deny
+  steps:
+  - user: |
+      pay [credit card]{"entity": "account_type", "value": "credit"}
+    intent: pay_cc
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - user: |
+      transfer money
+    intent: transfer_money
+  - action: action_switch_forms_ask
+  - intent: affirm
+  - action: utter_ok
+  - action: action_switch_forms_affirm
+  - slot_was_set:
+    - previous_form_name: cc_payment_form
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_transfer_money
+  - action: action_switch_back_ask
+  - slot_was_set:
+    - previous_form_name: null
+  - intent: deny
+  - action: utter_ask_whatelse
+  
 - story: search transactions + switch to transfer money, affirm + switch back, deny
   steps:
   - user: |
@@ -381,6 +517,150 @@ stories:
       No
     intent: deny
   - action: utter_ask_whatelse  
+
+- story: search transactions + switch to pay credit card, affirm + switch back, deny
+  steps:
+  - user: |
+      check earnings
+    intent: check_earnings
+  - action: transaction_search_form
+  - active_loop: transaction_search_form
+  - user: |
+      pay [credit card]{"entity": "account_type", "value": "credit"}
+    intent: pay_cc
+  - action: action_switch_forms_ask
+  - intent: affirm
+  - action: utter_ok
+  - action: action_switch_forms_affirm
+  - slot_was_set:
+    - previous_form_name: transaction_search_form
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_pay_cc
+  - action: action_switch_back_ask
+  - slot_was_set:
+    - previous_form_name: null
+  - intent: deny
+  - action: utter_ask_whatelse
+
+- story: transfer money + switch to search transactions, affirm + switch back, deny
+  steps:
+  - user: |
+      transfer money
+    intent: transfer_money
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
+  - user: |
+      check earnings
+    intent: check_earnings
+  - action: action_switch_forms_ask
+  - intent: affirm
+  - action: utter_ok
+  - action: action_switch_forms_affirm
+  - slot_was_set:
+    - previous_form_name: transfer_money_form
+  - action: transaction_search_form
+  - active_loop: transaction_search_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_transaction_search
+  - action: action_switch_back_ask
+  - slot_was_set:
+    - previous_form_name: null
+  - intent: deny
+  - action: utter_ask_whatelse
+
+- story: transfer money + switch to pay credit card, affirm + switch back, deny
+  steps:
+  - user: |
+      transfer money
+    intent: transfer_money
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
+  - user: |
+      pay [credit card]{"entity": "account_type", "value": "credit"}
+    intent: pay_cc
+  - action: action_switch_forms_ask
+  - intent: affirm
+  - action: utter_ok
+  - action: action_switch_forms_affirm
+  - slot_was_set:
+    - previous_form_name: transfer_money_form
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_pay_cc
+  - action: action_switch_back_ask
+  - slot_was_set:
+    - previous_form_name: null
+  - intent: deny
+  - action: utter_ask_whatelse
+
+- story: pay credit card + switch to search transactions, affirm + switch back, affirm
+  steps:
+  - user: |
+      pay [credit card]{"entity": "account_type", "value": "credit"}
+    intent: pay_cc
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - user: |
+      check earnings
+    intent: check_earnings
+  - action: action_switch_forms_ask
+  - intent: affirm
+  - action: utter_ok
+  - action: action_switch_forms_affirm
+  - slot_was_set:
+    - previous_form_name: cc_payment_form
+  - action: transaction_search_form
+  - active_loop: transaction_search_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_transaction_search
+  - action: action_switch_back_ask
+  - slot_was_set:
+    - previous_form_name: null
+  - intent: affirm
+  - action: utter_ok
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  
+- story: pay credit card + switch to transfer money, affirm + switch back, affirm
+  steps:
+  - user: |
+      pay [credit card]{"entity": "account_type", "value": "credit"}
+    intent: pay_cc
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - user: |
+      transfer money
+    intent: transfer_money
+  - action: action_switch_forms_ask
+  - intent: affirm
+  - action: utter_ok
+  - action: action_switch_forms_affirm
+  - slot_was_set:
+    - previous_form_name: cc_payment_form
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_transfer_money
+  - action: action_switch_back_ask
+  - slot_was_set:
+    - previous_form_name: null
+  - intent: affirm
+  - action: utter_ok
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
   
 - story: search transactions + switch to transfer money, affirm + switch back, affirm
   steps:
@@ -415,3 +695,93 @@ stories:
   - action: utter_ok
   - action: transaction_search_form
   - active_loop: transaction_search_form
+  
+- story: search transactions + switch to pay credit card, affirm + switch back, affirm
+  steps:
+  - user: |
+      check earnings
+    intent: check_earnings
+  - action: transaction_search_form
+  - active_loop: transaction_search_form
+  - user: |
+      pay [credit card]{"entity": "account_type", "value": "credit"}
+    intent: pay_cc
+  - action: action_switch_forms_ask
+  - intent: affirm
+  - action: utter_ok
+  - action: action_switch_forms_affirm
+  - slot_was_set:
+    - previous_form_name: transaction_search_form
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_pay_cc
+  - action: action_switch_back_ask
+  - slot_was_set:
+    - previous_form_name: null
+  - intent: affirm
+  - action: utter_ok
+  - action: transaction_search_form
+  - active_loop: transaction_search_form
+
+- story: transfer money+ switch to search transactions, affirm + switch back, affirm
+  steps:
+  - user: |
+      transfer money
+    intent: transfer_money
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
+  - user: |
+      check earnings
+    intent: check_earnings
+  - action: action_switch_forms_ask
+  - intent: affirm
+  - action: utter_ok
+  - action: action_switch_forms_affirm
+  - slot_was_set:
+    - previous_form_name: transfer_money_form
+  - action: transaction_search_form
+  - active_loop: transaction_search_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_transaction_search
+  - action: action_switch_back_ask
+  - slot_was_set:
+    - previous_form_name: null
+  - intent: affirm
+  - action: utter_ok
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
+
+- story: transfer money+ switch to pay credit card, affirm + switch back, affirm
+  steps:
+  - user: |
+      transfer money
+    intent: transfer_money
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
+  - user: |
+      pay [credit card]{"entity": "account_type", "value": "credit"}
+    intent: pay_cc
+  - action: action_switch_forms_ask
+  - intent: affirm
+  - action: utter_ok
+  - action: action_switch_forms_affirm
+  - slot_was_set:
+    - previous_form_name: transfer_money_form
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_pay_cc
+  - action: action_switch_back_ask
+  - slot_was_set:
+    - previous_form_name: null
+  - intent: affirm
+  - action: utter_ok
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
