--- a/data/stories/stories_switch_from_search_transactions.yml
+++ b/data/stories/stories_switch_from_search_transactions.yml
@@ -2,14 +2,16 @@ version: "2.0"
 
 stories:
 
-- story: search transactions + switch to transfer money, deny
+- story: search transactions + switch to transfer money or pay credit card, deny
   steps:
   - or:
     - intent: search_transactions
     - intent: check_earnings
   - action: transaction_search_form
   - active_loop: transaction_search_form
-  - intent: transfer_money
+  - or:
+    - intent: transfer_money
+    - intent: pay_cc
   - action: action_switch_forms_ask
   - intent: deny
   - action: action_switch_forms_deny
@@ -42,6 +44,32 @@ stories:
   - intent: deny
   - action: utter_ask_whatelse
 
+- story: search transactions + switch to pay credit card, affirm + switch back, deny
+  steps:
+  - or:
+    - intent: search_transactions
+    - intent: check_earnings
+  - action: transaction_search_form
+  - active_loop: transaction_search_form
+  - intent: pay_cc
+  - action: action_switch_forms_ask
+  - intent: affirm
+  - action: utter_ok
+  - action: action_switch_forms_affirm
+  - slot_was_set:
+    - previous_form_name: transaction_search_form
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_pay_cc
+  - action: action_switch_back_ask
+  - slot_was_set:
+    - previous_form_name: null
+  - intent: deny
+  - action: utter_ask_whatelse
+  
 - story: search transactions + switch to transfer money, affirm + switch back, affirm
   steps:
   - or:
@@ -62,6 +90,34 @@ stories:
   - slot_was_set:
     - requested_slot: null
   - action: action_transfer_money
+  - action: action_switch_back_ask
+  - slot_was_set:
+    - previous_form_name: null
+  - intent: affirm
+  - action: utter_ok
+  - action: transaction_search_form
+  - active_loop: transaction_search_form
+  
+- story: search transactions + switch to pay credit card, affirm + switch back, affirm
+  steps:
+  - or:
+    - intent: search_transactions
+    - intent: check_earnings
+  - action: transaction_search_form
+  - active_loop: transaction_search_form
+  - intent: pay_cc
+  - action: action_switch_forms_ask
+  - intent: affirm
+  - action: utter_ok
+  - action: action_switch_forms_affirm
+  - slot_was_set:
+    - previous_form_name: transaction_search_form
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_pay_cc
   - action: action_switch_back_ask
   - slot_was_set:
     - previous_form_name: null
