--- a/data/stories/stories.yml
+++ b/data/stories/stories.yml
@@ -2,7 +2,8 @@ version: "2.0"
 
 stories:
 
-- story: utter_ok after an affirm
+- story: say ok when user affirms after utter_help
   steps:
+  - action: utter_help
   - intent: affirm
   - action: utter_ok
