More test stories and some unhappy paths after action_show_--

--- a/data/stories/stories.yml
+++ b/data/stories/stories.yml
@@ -7,3 +7,21 @@ stories:
   - action: utter_help
   - intent: affirm
   - action: utter_ok
+
+- story: say ok when user affirms after action_show_balance
+  steps:
+  - action: action_show_balance
+  - intent: affirm
+  - action: utter_ok
+
+- story: say ok when user affirms after action_show_recipients
+  steps:
+  - action: action_show_recipients
+  - intent: affirm
+  - action: utter_ok
+  
+- story: say ok when user affirms after action_show_transfer_charge
+  steps:
+  - action: action_show_transfer_charge
+  - intent: affirm
+  - action: utter_ok
