--- a/tests/test_stories.yml
+++ b/tests/test_stories.yml
@@ -222,7 +222,59 @@ stories:
   - active_loop: transfer_money_form
   - active_loop: null
   - action: action_transfer_money
-    
+
+- story: Show bank account balance + ok + show recipients + ok + show transfer charge + ok + transfer money
+  steps:
+  - user: |
+      How much money is on my account?
+    intent: check_balance
+  - action: action_show_balance
+  - user: |
+      Ok
+    intent: affirm
+  - action: utter_ok
+  - user: |
+      Who can I send money to?
+    intent: check_recipients
+  - action: action_show_recipients
+  - user: |
+      Ok
+    intent: affirm
+  - action: utter_ok
+  - user: |
+      is there a transfer charge
+    intent: ask_transfer_charge
+  - action: action_show_transfer_charge
+  - user: |
+      Ok
+    intent: affirm
+  - action: utter_ok
+  - user: |
+      i want to transfer money
+    intent: transfer_money
+  - action: transfer_money_form
+  - active_loop: transfer_money_form
+  - active_loop: null
+  - action: action_transfer_money
+  
+- story: Show bank account balance + ok + pay credit card
+  steps:
+  - user: |
+      How much money is on my account?
+    intent: check_balance
+  - action: action_show_balance
+  - user: |
+      Ok
+    intent: affirm
+  - action: utter_ok
+  - user: |
+      i want to pay off my [emblm]{"entity": "credit_card", "value": "emblem"}
+    intent: pay_cc
+  - action: cc_payment_form
+  - active_loop: cc_payment_form
+  - active_loop: null
+  - action: action_pay_cc
+  
 - story: pay credit card and afterwards check account balance
   steps:
   - user: |
